DBDT31623 修改一些bug，闭环展示获取视图执行视图 sql